--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ futures-channel = "0.3.17"
 chrono = "0.4"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0"
+substring = "1.4.5"
 
 
 [features]
