--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ chrono = "0.4"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0"
 substring = "1.4.5"
+prometheus = { version = "0.13.0"}
+stopwatch = "0.0.7"
+hyper = { version = "0.14", features = ["full"] }
 
 
 [features]
